--- a/templates/index.html
+++ b/templates/index.html
@@ -19,26 +19,35 @@
     <div class="w-full h-screen bg-center bg-cover" style="background-image: url('{{ url_for('static', filename='bg.jpg') }}');">
         <div class="h10 bg-yellow-500 text-white w-full text-3xl flex justify-center items-center text-center font-bold">AUTO HAUL</div>
         <div class="h90 max-w-full flex justify-center items-center m-10 space-x-6">
-            <div class="flex w-1/4 justify-center text-center items-center h-1/2 bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
+            <a href="/V1" class="w-1/4 h-1/2">
+            <div class="flex w-full justify-center text-center items-center h-full bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
                 <div class="bg-white w-full h90 m-4 flex flex-col justify-center items-center text-center rounded-2xl font-bold hover:text-white hover:bg-yellow-500">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M20 8h-5v6H2v3h1a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-5zM6 18.5A1.5 1.5 0 0 1 4.5 17A1.5 1.5 0 0 1 6 15.5A1.5 1.5 0 0 1 7.5 17A1.5 1.5 0 0 1 6 18.5m12 0a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5M17 12V9.5h2.5l1.96 2.5zm1-5h-4v6H3L1.57 8H1V6h12l1-1h4z"/></svg><h1 class="text-3xl">VEHICLE 1</h1>
                 </div>
             </div>
-            <div class="flex w-1/4 justify-center text-center items-center h-1/2 bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
+        </a>
+        <a href="/V2" class="w-1/4 h-1/2">
+            <div class="flex w-full justify-center text-center items-center h-full bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
                 <div class="bg-white w-full h90 m-4 flex flex-col justify-center items-center text-center rounded-2xl font-bold hover:text-white hover:bg-yellow-500">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M20 8h-5v6H2v3h1a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-5zM6 18.5A1.5 1.5 0 0 1 4.5 17A1.5 1.5 0 0 1 6 15.5A1.5 1.5 0 0 1 7.5 17A1.5 1.5 0 0 1 6 18.5m12 0a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5M17 12V9.5h2.5l1.96 2.5zm1-5h-4v6H3L1.57 8H1V6h12l1-1h4z"/></svg><h1 class="text-3xl">VEHICLE 2</h1>
                 </div>
             </div>
-            <div class="flex w-1/4 justify-center text-center items-center h-1/2 bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
+        </a>
+            <a href="/V3" class="w-1/4 h-1/2">
+            <div class="flex w-full justify-center text-center items-center h-full bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
                 <div class="bg-white w-full h90 m-4 flex flex-col justify-center items-center text-center rounded-2xl font-bold hover:text-white hover:bg-yellow-500">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M20 8h-5v6H2v3h1a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-5zM6 18.5A1.5 1.5 0 0 1 4.5 17A1.5 1.5 0 0 1 6 15.5A1.5 1.5 0 0 1 7.5 17A1.5 1.5 0 0 1 6 18.5m12 0a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5M17 12V9.5h2.5l1.96 2.5zm1-5h-4v6H3L1.57 8H1V6h12l1-1h4z"/></svg><h1 class="text-3xl">VEHICLE 3</h1>
                 </div>
             </div>
-            <div class="flex w-1/4 justify-center text-center items-center h-1/2 bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
+        </a>
+            <a href="/V4" class="w-1/4 h-1/2">
+            <div class="flex w-full justify-center text-center items-center h-full bg-yellow-500 rounded-2xl hover:bg-white transition duration-300 ease-in-out">
                 <div class="bg-white w-full h90 m-4 flex flex-col justify-center items-center text-center rounded-2xl font-bold hover:text-white hover:bg-yellow-500">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M20 8h-5v6H2v3h1a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-5zM6 18.5A1.5 1.5 0 0 1 4.5 17A1.5 1.5 0 0 1 6 15.5A1.5 1.5 0 0 1 7.5 17A1.5 1.5 0 0 1 6 18.5m12 0a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5M17 12V9.5h2.5l1.96 2.5zm1-5h-4v6H3L1.57 8H1V6h12l1-1h4z"/></svg><h1 class="text-3xl">VEHICLE 4</h1>
                 </div>
             </div>
+        </a>
+
         </div>
     </div>
 </body>
