--- a/templates/vehicle.html
+++ b/templates/vehicle.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            margin: 0;
+        }
         .nav{
             background-color: #FFA500;
             width: 100%;
@@ -26,7 +29,7 @@
         }
         .map{
             flex: 0.5;
-            background-color: aqua;
+            
             height: 100%;
             margin-left: 30px;
         }
@@ -68,12 +71,12 @@
                 <div class="box">Vehicle Id : {{vehicle_id}}</div>
                 <div class="box">Speed : {{vehicle_speed}}</div>
                 <div style="display: flex;flex-direction: row;align-items: center;justify-content: center;">
-                    <div class="box" style="width: 150px;">past pole : {{past_pole}}</div>
-                    <div class="box" style="margin-left: 15px;width: 150px;">next pole : {{next_pole}}</div>
+                    <div class="box" style="width: 190px;">past pole : {{past_pole}}</div>
+                    <div class="box" style="margin-left: 15px;width: 190px;">next pole : {{next_pole}}</div>
                 </div>
                 <div style="display: flex;flex-direction: row;justify-content: center;">
-                    <div class="box" style="width: 150px;">latitude : {{latitude}}</div>
-                    <div class="box" style="margin-left: 15px;width: 150px;">altitude : {{altitude}}</div>
+                    <div class="box" style="width: 190px;">latitude : {{latitude}}</div>
+                    <div class="box" style="margin-left: 15px;width: 190px;">longitude : {{longitude}}</div>
                 </div>
                 <div style="display:flex; justify-content: center;">
                     <div class="box" style="width: 100px;">stop</div>
@@ -81,7 +84,8 @@
             </div>
         </div>
         <div class="map">
-            map
+            <!-- Use an iframe to embed the map.html file -->
+            <iframe src="{{ url_for('map')}}" frameborder="0" style="width: 100%; height: 100%;"></iframe>
         </div>
 
     </div>
